# protoc-repro

./: BUILD.bazel  MODULE.bazel  go.mod  go.sum  main.go  protoc.patch
