load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

go_library(
    name = "protoc-repro_lib",
    srcs = ["main.go"],
    importpath = "github.com/mortenmj/protoc-repro",
    visibility = ["//visibility:private"],
    deps = ["@com_github_envoyproxy_go_control_plane//pkg/server/v3:server"],
)

go_binary(
    name = "protoc-repro",
    embed = [":protoc-repro_lib"],
    visibility = ["//visibility:public"],
)
