module(name = "protoc-repro", version = "0.0.0")

bazel_dep(name = "com_github_envoyproxy_protoc_gen_validate", version = "0.0.0")
bazel_dep(name = "gazelle", version = "0.0.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.39.1", repo_name = "io_bazel_rules_go")

archive_override(
  module_name = "com_github_envoyproxy_protoc_gen_validate",
  urls = ["https://github.com/bufbuild/protoc-gen-validate/archive/refs/tags/v0.9.1.zip"],
  integrity = "sha256-A2lCBb5SxHUwRefMyUkGSYf2NV1eGkWeBycaHRS46Co=",
  strip_prefix = "protoc-gen-validate-0.9.1",
  patches = ["//:protoc.patch"],
)

git_override(
  module_name = "gazelle",
  remote = "https://github.com/fmeum/bazel-gazelle.git",
  commit = "fd6e3a6b9ebf3378c591b5d67bccdc5715594d6c",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_envoyproxy_go_control_plane",
)
